--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -3,10 +3,10 @@
     width: 100%;
     border-radius: 4px;
     box-shadow: 0px 0px 8px 0px #e1e1e3;
-    background-color: $header-background-color;
+    background-color: var(--header-background-color);
     margin-top: 10px;
     &:hover {
-        background-color: $background-hover-color !important;
+        background-color: var(--background-hover-color);
     }
     .item-title {
         display: flex;
@@ -33,16 +33,16 @@
     .work-information {
         display: flex;
         justify-content: space-between;
-        color: $text-color-dark;
-        font-size: $sm;
+        color: var(--text-color-dark);
+        font-size: var(--sm);
         padding: 0 10px;
         .item-icon {
             margin-right: 5px;
-            color: $icon-color-dark;
+            color: var(--icon-color-dark);
         }
         .created-date {
             margin-left: 10px;
-        }   
+        }
     }
 }
 @mixin display-flex {
