--- a/src/component/workspace/workDetail/styles.scss
+++ b/src/component/workspace/workDetail/styles.scss
@@ -1,6 +1,4 @@
-@import '../.././mixin.scss';
-@import '../.././font-size.scss';
-@import '../.././colors.scss';
+@import "../../../style/mixin.scss";
 
 .work-detail {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -10,21 +8,21 @@
     .work-item-header {
         height: 62px;
         @include display-flex;
-        box-shadow: 0px 1px 4px 0px $shadow-color-dark;
+        box-shadow: 0px 1px 4px 0px var(--shadow-color-dark);
         border-radius: 4px 4px 0px 0px;
         position: relative;
         z-index: 1;
         .work-item-title {
-            margin-left: 15px;   
-            font-size: $two-xl;
+            margin-left: 15px;
+            font-size: var(--two-xl);
             .back-icon {
                 &:hover {
-                    color: $text-hover-color;
+                    color: var(--text-hover-color);
                 }
             }
             .item-name {
-                margin-left: 10px;    
-                color: $text-color-dark;
+                margin-left: 10px;
+                color: var(--text-color-dark);
                 font-weight: bold;
             }
             .ant-select.status-selection {
@@ -41,7 +39,7 @@
                 }
                 .ant-select-arrow {
                     color: #40A9FF;
-                    font-size: $md;
+                    font-size: var(--md);
                     }
                 }
             .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
@@ -54,28 +52,28 @@
             justify-content: space-between;
             height: 40px;
             .due-date {
-                color: $icon-color-dark;
+                color: var(--icon-color-dark);
                 font-size: 12px;
                 margin-right: 15px;
                 .days-left {
-                    color: $text-warning-color;
+                    color: var(--text-warning-color);
                 }
                 .date {
                     font-size: 14px;
-                    color: $text-color-extreme-dark;
+                    color: var(--text-color-extreme-dark);
                     position: relative;
                     top: 5px;
                 }
                 > span {
                     margin-left: 5px;
                 }
-            }           
+            }
             .importance-level {
-                color: $icon-color-dark;
+                color: var(--icon-color-dark);
                 font-size: 12px;
                 margin-inline-end: 15px;
                 .level {
-                    color: $text-warning-color;
+                    color: var(--text-warning-color);
                     font-size: 14px;
                     position: relative;
                     top: 5px;
@@ -92,7 +90,7 @@
                     border-radius: 10px;
                     border-style: none;
                     margin-inline-end: 10px;
-                } 
+                }
                 .btn-action.mark-done {
                     background-color: #F0F0F1;
                 }
@@ -110,7 +108,7 @@
                 }
             }
             .vertical-line {
-                border-right: 1px solid $border-color-light;
+                border-right: 1px solid var(--border-color-light);
                 height: 40px;
                 position: relative;
                 margin-inline-end: 15px;
@@ -122,7 +120,7 @@
         justify-content: space-between;
         width: 100%;
         #delete-icon {
-            color: $text-warning-color;
+            color: var(--text-warning-color);
         }
         .detail-view-left {
             width: 70%;
@@ -130,7 +128,7 @@
             flex-direction: column;
             background-color: white;
             border-right: 1px solid #E1E1E3;
-            .tag {  
+            .tag {
                 display: flex;
                 flex-wrap: wrap;
                 margin-left: 15px;
@@ -146,7 +144,7 @@
                 .add-tag {
                     margin-top: 15px;
                     height: 22px;
-                    border: 1px dashed $border-color-light;
+                    border: 1px dashed var(--border-color-light);
                 }
             }
             .item-description {
@@ -157,10 +155,10 @@
                 .anticon-edit {
                     margin-left: 15px;
                     &:hover {
-                        color: $text-hover-color;
+                        color: var(--text-hover-color);
                     }
                 }
-            }   
+            }
             .todo-list {
                 align-self: center;
                 display: flex;
@@ -174,9 +172,9 @@
                 .todo-title {
                     width: fit-content;
                     background-color: white;
-                    font-size: $md;
+                    font-size: var(--md);
                     font-weight: bold;
-                    color: $text-color-dark;
+                    color: var(--text-color-dark);
                     position: relative;
                     bottom: 10px;
                     align-self: center;
@@ -204,13 +202,13 @@
                         .assignee {
                             margin-right: 15px;
                         }
-                    }  
+                    }
                     .todo-name {
-                        color: $text-color-extreme-dark;
+                        color: var(--text-color-extreme-dark);
                         margin-left: 10px;
-                    
+
                 }
-            }  
+            }
             .activities-section {
                 width: 95%;
                 align-self: center;
@@ -221,12 +219,12 @@
                     justify-content: space-between;
                     .title {
                         color: #787885;
-                        font-size: $lg;
+                        font-size: var(--lg);
                         font-weight: bold;
                     }
                     .ant-checkbox-wrapper {
                         color: #5A5B6A;
-                        font-size: $md;
+                        font-size: var(--md);
                     }
                 }
                 .adding-activities-box {
@@ -242,7 +240,7 @@
                         margin-inline: 15px;
                         margin-top: 5px;
                         #emoji-icon {
-                            font-size: $lg;
+                            font-size: var(--lg);
                             color: #2979FF;
                             margin-top: 5px;
                         }
@@ -254,7 +252,7 @@
                     .adding-input:focus {
                         outline: none;
                     }
-                    
+
                 }
                 .activities-list {
                     .activities-item {
@@ -271,14 +269,14 @@
                                     margin-right: 15px;
                                 }
                                 .assignee {
-                                    font-size: $md;
+                                    font-size: var(--md);
                                     // font-weight: bold;
                                     color: #292A31;
                                 }
                                 .created-time {
                                     font-style: italic;
                                     color: #787885;
-                                    font-size: $sm;
+                                    font-size: var(--sm);
                                 }
                                 .activities-tag {
                                     height: fit-content;
@@ -292,7 +290,7 @@
                                 }
                             }
                             .activities-actions {
-                                font-size: $xl;
+                                font-size: var(--xl);
                                 #delete-icon{
                                     margin-right: 10px;
                                 }
@@ -302,8 +300,8 @@
                             }
                         }
                         .activities-title {
-                            color: $text-color-extreme-dark;
-                            font-size: $md;
+                            color: var(--text-color-extreme-dark);
+                            font-size: var(--md);
                             margin-top: 5px;
                         }
                         hr {
@@ -319,8 +317,8 @@
             flex-direction: column;
             .assigment-section {
                 .title {
-                    font-size: $md;
-                    color: $text-color-dark;
+                    font-size: var(--md);
+                    color: var(--text-color-dark);
                 }
                 .owner-section {
                     margin: 15px 15px 0px 15px;
@@ -329,8 +327,8 @@
                         justify-content: space-between;
                         margin-top: 10px;
                         .owner-name {
-                            font-size: $lg;
-                            color: $text-color-extreme-dark;
+                            font-size: var(--lg);
+                            color: var(--text-color-extreme-dark);
                             display: flex;
                             align-items: center;
                             font-weight: bold;
@@ -354,7 +352,7 @@
                             text-align: center;
                             align-self: center;
                         }
-                    } 
+                    }
                 }
                 .participant-section {
                     display: flex;
@@ -413,9 +411,9 @@
                         @include display-flex;
                         padding: 5px 15px;
                         &:hover {
-                            background-color: $background-hover-color;
+                            background-color: var(--background-hover-color);
                             #delete-icon {
-                                font-size: $xl;
+                                font-size: var(--xl);
                                 display: block;
                             }
                         }
@@ -425,7 +423,7 @@
                             margin-right: 10px
                         }
                         .anticon {
-                            font-size: $md;
+                            font-size: var(--md);
                         }
                         .anticon-file-pdf {
                             color: #FFB41F;
@@ -434,7 +432,7 @@
                             color: #43A047;
                         }
                         .anticon-file-word {
-                            color: $text-hover-color;
+                            color: var(--text-hover-color);
                         }
                         #delete-icon {
                             display: none;
@@ -442,7 +440,7 @@
                     }
                 }
             }
-        }   
+        }
     }
 }
 @media (max-width: 1536px) {
