--- a/src/component/workspace/sideBar/styles.scss
+++ b/src/component/workspace/sideBar/styles.scss
@@ -47,8 +47,8 @@
             }
             .ant-menu-submenu-title {
                 padding-right: unset;
-                padding-left: 20px;
-                width: 107%;
+                padding-left: 20px !important;
+                width: 108%;
                 &:active {
                     background: unset;
                 }
@@ -70,7 +70,7 @@
             }
             .ant-menu-submenu-arrow {
                 position: absolute;
-                right: 40px;
+                right: 32px;
             }
         }
         .work-item-list {
