--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,7 @@
 @import "./mixin.scss";
 @import "./colors.scss";
 @import "./font-size.scss";
+@import 'antd/dist/antd.css';
 
 body {
     margin: 0;
