--- a/src/module/work-management/component/bucket-board/component/bucket-list/style.scss
+++ b/src/module/work-management/component/bucket-board/component/bucket-list/style.scss
@@ -3,12 +3,13 @@
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
         .bucket-box {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 10px;
-            width: 50%;
+            width: calc(50% - 10px);
+            margin-top: 10px;
             .bucket-header {
                 @include display-flex;
                 .bucket-title {
@@ -28,6 +29,9 @@
                     .bucket-icon {
                         font-size: var(--three-xl);
                         margin-right: 10px;
+                        &:hover {
+                           color: var(--text-hover-color);
+                        }
                     }
                 }
             }
@@ -51,7 +55,8 @@
                         margin-left: 5px;
                         .favourite-icon {
                             color: #FFB41F;
-                            margin-top: 10px
+                            margin-top: 10px;
+                            font-size: var(--xl);
                         }
                     }
                 }
@@ -65,7 +70,7 @@
                         }
                         .work-item-name {
                             &:hover {
-                                color: #2979FF;
+                                color:  var(--text-hover-color);
                             }
                         }
                         .work-item-name {
