--- a/src/module/work-management/component/work-detail/styles.scss
+++ b/src/module/work-management/component/work-detail/styles.scss
@@ -3,7 +3,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: white;
     margin: 20px;
-    width: 1150px;
+    width: 60%;;
     border-radius: 4px 4px 0 0;
     .detail-view {
         display: flex;
