feature: drag and drop task

--- a/src/component/header/style.scss
+++ b/src/component/header/style.scss
@@ -30,6 +30,7 @@
             color: var(--text-color-dark);
             font-size: var(--lg);
             font-weight: bold;
+            cursor: pointer;
             img {
                 height: 40px;
                 width: 40px;
