--- a/src/style/color.scss
+++ b/src/style/color.scss
@@ -17,5 +17,6 @@
     --border-color-light: #D2D2D6;
     //icon
     --icon-color-dark: #787885;
+    --icon-color-hover: white;
     --text-warning-color: #FF4D4F;
 }
