add: filter work item by workItemMenu

--- a/src/module/work-management/component/item-card/style.scss
+++ b/src/module/work-management/component/item-card/style.scss
@@ -5,6 +5,7 @@
     box-shadow: 0px 0px 8px 0px #e1e1e3;
     background-color: var(--header-background-color);
     margin-top: 10px;
+    cursor: pointer;
     &:hover {
         background-color: var(--background-hover-color);
     }
