--- a/src/module/work-management/component/bucket-board/component/bucket-list/style.scss
+++ b/src/module/work-management/component/bucket-board/component/bucket-list/style.scss
@@ -7,12 +7,12 @@
     justify-content: space-between;
   }
   .my-masonry-grid_column {   
-    width: calc(50% - 10px) !important;    
+    width: calc(50% - 10px) !important;  
     .bucket-box {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        margin-top: 10px;
+            margin: 10px 1px;
         .bucket-header {
             @include display-flex;
             .bucket-title {
