--- a/src/module/work-management/component/side-bar/style.scss
+++ b/src/module/work-management/component/side-bar/style.scss
@@ -2,10 +2,11 @@
     width: 16%;
     margin: 20px 20px 0 20px;
     background-color: var(--body-background-color);
-    height: 100%;
     color: var(--text-color-dark);
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+    padding-right: 10px;
 }
 @media (max-width: 1536px) {
     .sidebar {
