add: filter by assignee

--- a/src/module/work-management/component/side-bar/component/filter/style.scss
+++ b/src/module/work-management/component/side-bar/component/filter/style.scss
@@ -1,6 +1,6 @@
 .sub-filter {
     margin-top: 15px;
-    .ant-select.selector.ant-select-single.ant-select-show-arrow {
+    .ant-select.selector {
         width: 100%;
     }
     .checkbox-filter {
