--- a/src/component/header/component/channel-selector/style.scss
+++ b/src/component/header/component/channel-selector/style.scss
@@ -11,6 +11,7 @@
     border-style: none;
     border-radius: 4px;
     text-align: center;
+    cursor: pointer;
     span {
         margin-left: 15px;
     }
@@ -22,6 +23,8 @@
     width: 370px;
     height: 130px;
     border-radius: 10px;
+    margin-top: 20px;
+    cursor: pointer;
     color: var(--text-color-light);
     > p {
         font-size: var(--two-xl);
@@ -35,5 +38,6 @@
     .ant-modal-body {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 }
