refactor: fetch Api using axios

--- a/src/module/work-management/component/work-stream/component/work-list/style.scss
+++ b/src/module/work-management/component/work-stream/component/work-list/style.scss
@@ -2,7 +2,7 @@
     margin-top: 10px;
     align-self: center;
     width: 90%;
-    overflow: scroll;
+    overflow: auto;
     .search-result {
         font-size: var(--two-xl);
         color: var(--text-color-dark);
