--- a/src/module/work-management/component/work-detail/component/header/style.scss
+++ b/src/module/work-management/component/work-detail/component/header/style.scss
@@ -69,6 +69,7 @@
                 color: var(--text-color-extreme-dark);
                 position: relative;
                 top: 5px;
+                margin-left: 5px;
             }
             > span {
                 margin-left: 5px;
