--- a/src/module/work-management/component/work-stream/styles.scss
+++ b/src/module/work-management/component/work-stream/styles.scss
@@ -1,10 +1,10 @@
 @import "../../../../style/mixin.scss";
 
 .work-stream {
-    margin-top: 20px;
+    margin: 20px 0;
     display: flex;
     width: 24%;
-    height: 100%;
+    height: 80%;
     background-color: #F8F8F8;
     flex-direction: column;
 }
