--- a/src/module/work-management/component/work-stream/styles.scss
+++ b/src/module/work-management/component/work-stream/styles.scss
@@ -4,7 +4,7 @@
     margin: 20px 0;
     display: flex;
     width: 24%;
-    height: 80%;
+    height: 1080px;
     background-color: #F8F8F8;
     flex-direction: column;
 }
